# kafka-python-lab

./: docker-compose.yml  pyproject.toml
src/firehose/: main.py
src/utils/: broker_test.py
src/weather/: helpers.py  main.py  processes.py
